# Tower-Defence

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  conandata.yml  conanfile.txt  main  run.sh
.cache/clangd/index/: AbilityActions.cpp.7728257640DE2C71.idx  AbilityActions.h.7262164D1AEE95EE.idx  AbilityUseAction.cpp.501F79829298400C.idx  AbilityUseAction.h.1F6642BF286403D8.idx  BaseController.h.79E4D978B079F46B.idx  BaseEditor.cpp.1436E6BB4A8A6A37.idx  BaseEditor.h.39944D38784DFA6C.idx  BoundaryDataTransfer.cpp.1223298087A7AF99.idx  BoundaryDataTransfer.h.A8F734CE43BF1D71.idx  Enemy.h.5A96C3D06C01833C.idx  EnemyActions.cpp.2412D6A85BBA59DE.idx  EnemyActions.h.1657B944FF2D8C9F.idx  EnemyController.cpp.437A3C22C45BD5EC.idx  EnemyController.h.00C20D347310B13C.idx  EnemyEditor.cpp.CA2A0A669106CC38.idx  EnemyEditor.h.9D8DA1890F046D9E.idx  EnemySample.cpp.EED212EBAEAB816E.idx  EnemySample.h.AF0DF24026BB53E2.idx  Engine.cpp.805BD7E3AD76FDAD.idx  Engine.h.FF2F9601348D74C5.idx  EngineStorage.cpp.CF1AFB35AEB3F1B8.idx  EngineStorage.h.241FF66EFE924473.idx  FrameData.h.524DCA2C514FA886.idx  GameStatus.h.8517B4595ECFE59C.idx  IActing.h.D02AB8B1AFCD14CB.idx  IPlayerAction.h.D84C64E2BF699863.idx  MainManager.cpp.11AF5BBC934D35E2.idx  MainManager.h.BD18E31B009D5204.idx  Map.cpp.58D62FB5E6412179.idx  Map.h.61496E5326C090D7.idx  MapController.cpp.9FB5AF07428809DA.idx  MapController.h.17486991B94C08A8.idx  MapEditor.cpp.AC1C83E1CCE98A45.idx  MapEditor.h.20D8B539A39C7FDE.idx  MapObject.h.AAC6452A772A6B1D.idx  Project.cpp.8C19E23635B6300C.idx  Project.h.8BB8C81D1B768CD3.idx  ProjectController.cpp.2FC72A6F9E4743DB.idx  ProjectController.h.C01F85C24CF46A96.idx  ProjectCreationDialog.cpp.BF802C5669AE7C5F.idx  (+38 more)
123/: Project.json
1234/: Project.json
Core/: ProjectEditor.cpp  ProjectEditor.h
editor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ProjectCreationDialog.cpp  ProjectCreationDialog.h  ProjectSelectorDialog.cpp  ProjectSelectorDialog.h  main.cpp
editor/entity/: Project.h
editor/include/: MainWindow.h  ProjectCreationDialog.h
editor/include/Controls/: AbilityController.h  EffectController.h  EffectCreatorController.h  EnemyController.h  MapController.h  ProjectController.h  TowerController.h
editor/include/Editors/: AbilityEditor.h  EffectCreatorEditor.h  EffectEditor.h  EnemyEditor.h  MainWindow.h  MapEditor.h  ProjectCreationDialog.h  ProjectEditor.h  ProjectSelectorDialog.h  TowerEditor.h  WaveChainEditor.h  WaveEditor.h
editor/include/Entity/: AbilitySample.h  EffectCreatorSample.h  EffectSample.h  EnemyEffectSample.h  EnemySample.h  Map.h  Player.h  Project.h  Team.h  TowerEffectSample.h  TowerSample.h  WaveChain.h  WaveSample.h
editor/include/Utils/: BaseController.h  BaseEditor.h  Serializable.h  TextureManager.h  TextureUtils.h
editor/src/: MainWindow.cpp  MainWindow.ui  ProjectCreationDialog.cpp  ProjectSelectorDialog.cpp  main.cpp
editor/src/Controls/: AbilityController.cpp  EffectController.cpp  EffectCreatorController.cpp  EnemyController.cpp  MapController.cpp  ProjectController.cpp  TowerController.cpp
editor/src/Editors/: AbilityEditor.cpp  AbilityEditor.ui  EffectCreatorEditor.cpp  EffectCreatorEditor.ui  EffectEditor.cpp  EffectEditor.ui  EnemyEditor.cpp  EnemyEditor.ui  MainWindow.cpp  MapEditor.cpp  MapEditor.ui  ProjectCreationDialog.cpp  ProjectCreationDialog.ui  ProjectEditor.cpp  ProjectEditor.ui  ProjectSelectorDialog.cpp  ProjectSelectorDialog.ui  TowerEditor.cpp  TowerEditor.ui  WaveChainEditor.cpp  WaveChainEditor.ui  WaveEditor.cpp  WaveEditor.ui
editor/src/Entity/: AbilitySample.cpp  EffectCreatorSample.cpp  EffectSample.cpp  EnemyEffectSample.cpp  EnemySample.cpp  Map.cpp  Player.cpp  Project.cpp  Team.cpp  TowerEffectSample.cpp  TowerSample.cpp  WaveChain.cpp  WaveSample.cpp
editor/src/Utils/: BaseEditor.cpp  TextureManager.cpp  TextureUtils.cpp
engine/: CMakeLists.txt  main  main.cpp  project.json
engine/src/display/: MainManager.cpp  MainManager.h  NetworkUtil.cpp  NetworkUtil.h  RendererGame.cpp  RendererGame.h  TextureCache.cpp  TextureCache.h  mainManager.cpp  mainManager.h  renderer.cpp  renderer.h
engine/src/inner/Zaglushki/: MapSample.h  ProjectSample.h
engine/src/inner/core/: BoundaryDataTransfer.cpp  BoundaryDataTransfer.h  Engine.cpp  Engine.h  EngineStorage.cpp  EngineStorage.h  FrameData.h  ProjectLoader.cpp  ProjectLoader.h  TickGenerator.cpp  TickGenerator.h
engine/src/inner/game_entities/: AbilityActions.cpp  EnemyActions.cpp  EnemyActions.h  GameStatus.h  IActing.h  MapObject.h  Projectile.cpp  Projectile.h  TowerActions.cpp  TowerActions.h  WaveActions.cpp  WaveActions.h
engine/src/inner/game_objects/: AbilityActions.cpp  AbilityActions.h  EffectCreatorActions.cpp  EffectCreatorActions.h  EffectOnEnemyActions.cpp  EffectOnEnemyActions.h  EffectOnTowerActions.cpp  EffectOnTowerActions.h  EnemyActions.cpp  EnemyActions.h  GameStatus.h  IActing.h  MapObject.h  Projectile.cpp  Projectile.h  TowerActions.cpp  TowerActions.h  WaveActions.cpp  WaveActions.h
engine/src/inner/game_objects/entities/: EffectCreator.h  EffectOnEnemy.h  Enemy.h  EnginePlayer.h  EngineTeam.h  Tower.h  Wave.h
engine/src/inner/game_objects/samples/: AbilitySample.h  EffectCreatorSample.h  EffectOnEnemySample.h  EffectOnTowerSample.h  EffectSample.h
engine/src/inner/player_actions/: AbilityUseAction.cpp  AbilityUseAction.h  IPlayerAction.h  Replay.h  TowerUpgradeAction.cpp  TowerUpgradeAction.h
example_project/: project.json
